# wallet-scoring

./: .env.example  .gitignore  AGENTS.md  README.md  app-config-template.yaml  compose.yaml  init.py  literature-review-liquidation-burst.md  literature-review.md  m0-burst-findings.md  m0-magnet-findings.md  m1-crowding-lift-findings.md  m2-baselines-findings.md  plan.md  pyproject.toml  references.bib  research-proposal.md
clients/: __init__.py  mongo.py
config/: db_config.py  models.py  settings.py
docs/: data-informed-research-ideas.md  database-schema.md  eda-report-vi.tex  eda-report-vi.typ  eda-report.tex  eda-report.typ  references.bib
eda/: 01_dataset_overview.py  02_actions.py  03_assets.py  04_platforms.py  05_leverage.py  06_wallets.py  07_temporal.py  08_positions.py  09_capital.py  10_summary.py  config.py
hooks/: error.py
pipeline/: 01_reconstruct_positions.py  02_compute_features.py  03_fetch_labels.py  04_compute_baselines.py  05_feature_analysis.py  06_walkforward_validation.py  07_bayesian_skill_model.py  08_baseline_comparison.py  09_luck_vs_skill_null.py  10_sign_randomization.py  11_wash_trade_filter.py  12_zscore_baseline.py  13_full_baseline_comparison.py  14_learned_ranker.py  15_rolling_walkforward.py  _numeric.py  _paths.py  _ranking.py  _report.py  b01_burst_baseline.py  b02_hawkes_baseline.py  b03_thp_baseline.py  b04_covtpp_baseline.py  b05_stgnn_baseline.py  b06_regime_robustness.py  b07_oct2025_case_study.py  b08_covtpp_stgnn_walkforward.py  b09_operational_metrics.py  config.py
scripts/: 01_accounts_overview.py  _client.py  (+10 more)
(+50 files in other folders)
